# n-particle-simulator

./: .gitignore  CMakeLists.txt  README.md  benchmark  benchmark_speedup  serial.cpp
Report/: Report.tex
include/: constants.hpp  grid.hpp  linked_list.hpp  particles.hpp
openmp/: CMakeLists.txt  openmp.cpp
openmp/include/: defaults.hpp  grid.hpp
openmp/src/: grid.cpp
openmpi/: CMakeLists.txt  openmpi.cpp
openmpi/include/: partial_grid.hpp  particle.hpp  particles.hpp
openmpi/src/: partial_grid.cpp  particles.cpp
pthreads/: CMakeLists.txt  threads.cpp
pthreads/include/: grid.hpp  particles.hpp
pthreads/src/: grid.cpp  particles.cpp
serial/: CMakeLists.txt  serial.cpp
serial/include/: defaults.hpp  grid.hpp  particle.hpp  particles.hpp
serial/src/: grid.cpp  particles.cpp
src/: grid.cpp
